--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
+</head>
 
+<body>
   <script src="./libraries/p5.js"></script>
   <script src="./libraries/p5.dom.min.js"></script>
   <script src="./libraries/p5.sound.min.js"></script>
   <script src="./libraries/p5.play.js"></script>
   <script src="./libraries/matter.js"></script>
-
-
-</head>
-
-<body>
+  <script src="./Ground.js"></script>
+  <script src="./Log.js"></script>
+  <script src="./Plank.js"></script>
+  <script src="./Ball.js"></script>
+  <script src="./Box.js"></script>
   <script src="sketch.js"></script>
 </body>
 </html>
